--- a/views/email.handlebars
+++ b/views/email.handlebars
@@ -8,8 +8,12 @@
 </head>
 
 <body>
-    <h2>Нове замовлення</h2>
-    <p>{{data}}</p>
+    <h3>Інформація про замовника</h3>
+    <p>Ім'я: {{data.name}}</p>
+    <p>Номер телефону: {{data.number}}</p>
+    <p>Загальна сума: {{data.sum}} грн.</p>
+    <h3>Замовлення</h3>
+    <p>{{data.items}}</p>
 </body>
 
 </html>
