--- a/views/email.handlebars
+++ b/views/email.handlebars
@@ -11,6 +11,8 @@
     <h3>Інформація про замовника</h3>
     <p>Ім'я: {{data.name}}</p>
     <p>Номер телефону: {{data.number}}</p>
+    <p>Адреса: {{data.address}}</p>
+    <p>Коментар: {{data.comment}}</p>
     <p>Загальна сума: {{data.sum}} грн.</p>
     <h3>Замовлення</h3>
     <p>{{data.items}}</p>
